kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-microservice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.4.157.22.117.sslip.io
      secretName: devops-microservice-tls
  rules:
    - host: dev.4.157.22.117.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-microservice
                port:
                  number: 80
